--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --white: #fff;
   --blue: #1B9CFC;
   --red: #FF3F34;
+  --alt-red: rgba(255, 63, 52, 15%);
   --dark: #1E272E;
   --gray: #ACACAC;
   --light: #E3E3E3;
@@ -27,4 +28,108 @@
 /* borders */
   --border-size: 16px;
   --border-complete: 50%;
+  --border: 1.5px
+}
+
+.feather {
+  width: 24px;
+  height: 24px;
+  stroke: var(--red);
+  stroke-width: 1.5;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: none;
+}
+
+.feather-search {
+  width: 32px;
+  height: 32px;
+}
+
+.float-nav {
+  position: fixed;
+  bottom: 44px;
+  right: 44px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  overflow: hidden;
+}
+
+.navigation {
+  border: solid var(--border) var(--red);
+  border-radius: var(--border-complete);
+  height: 74px;
+  width: 74px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  z-index: 99;
+  background: var(--white);
+}
+
+.navigation-items {
+  list-style: none;
+  transform: translateY(200%);
+  transition: transform .3s ease-in-out;
+}
+
+.float-nav:hover .navigation-items {
+  transform: translateY(0);
+}
+
+.nav-item {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 12px;
+}
+
+.nav-item__link {
+  border: solid var(--border) var(--red);
+  border-radius: var(--border-complete);
+  height: 38px;
+  width: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .3s ease-in-out;
+}
+
+.nav-item__link:hover {
+  width: 138px;
+  border-radius: 19px;
+}
+
+.nav-item__link:hover .link-text {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.nav-item__link:hover .icon {
+  transform: scale(0.11111111);
+}
+
+.link-text {
+  position: absolute;
+  color: red;
+  font-size: var(--f-base);
+  transform: scale(0.11111111);
+  opacity: 0;
+  transition: all .3s ease-in-out;
+}
+
+.icon {
+  transition: transform .3s ease-in-out;
+}
+
+.red-hover {
+  transition: all .3s ease-in-out;
+  transition-property: background, width, border-radius;
+}
+
+.red-hover:hover {
+  cursor: pointer;
+  background: var(--alt-red);
 }
