--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,7 +9,11 @@
 }
 
 p, span, h1, h2, h3, h4, h5, h6, a {
-  font-family: Montserrat, 'sans-serif';
+  font-family: Poppins, 'sans-serif';
+}
+
+p, span, a {
+  font-weight: 200;
 }
 
 
@@ -299,7 +303,8 @@ p, span, h1, h2, h3, h4, h5, h6, a {
   display: flex;
   flex-direction: column;
   transition: top .3s ease-in-out;
-  top: 100%
+  top: 100%;
+  justify-content: space-between;
 }
 
 .card-content {
@@ -329,6 +334,7 @@ p, span, h1, h2, h3, h4, h5, h6, a {
   border-top: .5px solid var(--gray);
   background: rgb(250, 250, 250);
   height: 100%;
+  max-height: 53px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
